2013-08-29 Lucian Ancu <lucian@cern.ch>
	M python/configManager.py
	* added infrastructure for adding systematics both from a list [S1,S2,S3] or a list of lists  [[S11,S12],[S21,S22,S23],...]. Summed systematic takes the first name in the list, i.e. S1, S11 or S21. 
	
2013-08-23 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        M macros/contourplot/contourmacros/SUSY_m0_vs_m12_all_withBand_cls.C
	A macros/contourplot/contourmacros/limit_plot_SM.py
	* minor changes in SUSY_m0_vs_m12_all_withBand_cls.C
	* added new contour plot plotting macro in python: limit_plot_SM.py

2013-08-14 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Fixed nuisance parameters being stored correctly in ModelConfig in CombineWorkspaces.cxx

2013-08-12 Max Baak <mbaak@cern.ch>
        M       setup.sh
        * Revert to Python version 2.6.5, this works okay (again) on lxplus.

2013-08-09 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	M       src/Utils.cxx
	* Fixed some bugs in CombineWorkspaces.cxx, so that combination data and pdf can now be fit to each other
	*	Some minor naming issues remain, to be followed up.
	* Added some catches in Util::resetError() function for combination workspaces

2013-08-06 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Solved re-introduced bug for collecting hypotests
	*	 for combination of workspaces, one must add "+combined" (where combined is the workspace name in file) to the format string
	*	 Example : format2 = 'filename+/afs/cern.ch/atlas/project/cern/susy/users/jlorenz/Sig_SM_SS1step_%f_%f_%f+combined'
	* Added more debug print statements

2013-08-05 Alex Koutsman <alex.koutsman@cern.ch>
	M       src/CombineWorkSpaces.cxx
	* Solved bug, where combination pdf category was out of sync with combination data
	* Added more print statements and fixed naming-problems

2013-07-26 Max Baak <mbaak@cern.ch>
        M       setup.sh